Integration of OpenMP and Automated Path. Seems to be some issues with the video being processed

--- a/final/makefile
+++ b/final/makefile
@@ -1,9 +1,15 @@
 
 CC       =  g++
-FLAGS    = -O3 -Wall
-CFLAGS   = $(FLAGS) 
+FLAGS    = -O3 -Wall -std=gnu++0x -fopenmp -g -pg #-E
+CFLAGS   = $(FLAGS)
 CXXFLAGS = $(FLAGS)
-LDFLAGS  = -lm 
+LDFLAGS  = -lm -L.
+
+ifeq ($(MAKECMDGOALS),mandelbulb)
+	CFLAGS+=-DBULB
+	CXXFLAGS+=-DBULB
+else
+endif
 
 PROGRAM_NAME=mandelbox
 
@@ -11,6 +17,10 @@ $(PROGRAM_NAME): main.o print.o timing.o savebmp.o getparams.o 3d.o getcolor.o d
 	mandelboxde.o raymarching.o renderer.o init3D.o
 	$(CC) -o $@ $? $(CFLAGS) $(LDFLAGS)
 
+mandelbulb: main.o print.o timing.o savebmp.o getparams.o 3d.o getcolor.o distance_est.o \
+	mandelboxde.o raymarching.o renderer.o init3D.o
+	$(CC) -o $@ $? $(CFLAGS) $(LDFLAGS)
 
 clean:
-	rm *.o $(PROGRAM_NAME) $(EXEEXT) *~
+	rm -f *.o mandelbulb $(PROGRAM_NAME) $(EXEEXT) *~
+
